Rebrand to Duozz Flow + Google Drive integration
- Renamed all references from VideoFlow to Duozz Flow
- Package: com.duozzflow.app
- Replaced AWS S3 with Google Drive API for file storage
- Google Drive: service account auth, project subfolders, shareable links
- Updated docker-compose with Google Drive env vars
- Removed @aws-sdk dependencies
- Flutter web build verified with new branding

--- a/frontend/web/index.html
+++ b/frontend/web/index.html
@@ -4,13 +4,13 @@
   <base href="$FLUTTER_BASE_HREF">
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
-  <meta name="description" content="ProjectFlow - Modern Project Management">
+  <meta name="description" content="Duozz Flow - Modern Project Management">
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
-  <meta name="apple-mobile-web-app-title" content="ProjectFlow">
+  <meta name="apple-mobile-web-app-title" content="Duozz Flow">
   <link rel="manifest" href="manifest.json">
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
-  <title>ProjectFlow</title>
+  <title>Duozz Flow</title>
   <style>
     body {
       margin: 0;
@@ -46,7 +46,7 @@
 <body>
   <div class="loading" id="loading">
     <div class="spinner"></div>
-    <p>Loading ProjectFlow...</p>
+    <p>Loading Duozz Flow...</p>
   </div>
   <script src="flutter_bootstrap.js" async></script>
 </body>
